--- a/static/html/default/templates/inventario/documentoProducto.html
+++ b/static/html/default/templates/inventario/documentoProducto.html
@@ -17,23 +17,30 @@
             location.href='/{systemModuleName}/inventario/actualizar_productos?documento='+id;
     }
 </script>
-<h2>Mantenimiento de productos</h2>
-<p>
-    <br/>
+<h3>Mantenimiento de productos</h3>
+<p class="text-muted">
+    Cree documentos por medio de los cuales hará el ingreso de los productos a la base de datos de la empresa
 </p>
+<hr/>
+<br/><br/>
 <section>
-    <nav class="horizontal-menu compact">
+    <nav class="horizontal-menu">
         <ul>
-            <li><a href="javascript: void(0);" onclick="NuevoDocumento(event);"><i class="icon-new"></i> Crear nuevo documento</a></li>
-            <li><a href="javascript: void(0);" onclick="Historia(event);"><i class="icon-history"></i> Historial de documentos aplicados</a></li>
-            <li><a href="/{systemModuleName}/inventario/resumenGeneralProducto"><i class="icon-clipboard-2"></i> Catálogo de productos</a></li>
-            <li><a href="/{systemModuleName}/inventario/cambiarPrecios"><i class="icon-cycle"></i> Actualizar productos</a></li>
-            <li><a href="/{systemModuleName}/inventario/actualizarFoto"><i class="icon-pictures"></i> Imagen de producto</a></li>
-            <li><a href="/{systemModuleName}/inventario/productosSugeridos"><i class="icon-bookmark-3"></i> Productos sugeridos</a></li>
+            <li><a href="javascript: void(0);" onclick="Historia(event);"><i class="icon-history"></i> Historial de documentos</a></li>
+            <li>
+                <a class="dropdown-toggle" href="#">Opciones</a> 
+                <ul class="dropdown-menu" data-role="dropdown">
+                    <li><a href="javascript: void(0);" onclick="NuevoDocumento(event);"><i class="icon-new"></i> Nuevo documento</a></li>
+                    
+                    <li><a href="/{systemModuleName}/inventario/cambiarPrecios"><i class="icon-cycle"></i> Actualizar productos</a></li>
+                    <li><a href="/{systemModuleName}/inventario/actualizarFoto"><i class="icon-pictures"></i> Imagen de producto</a></li>
+                    <li><a href="/{systemModuleName}/inventario/productosSugeridos"><i class="icon-bookmark-3"></i> Productos sugeridos</a></li>
+               </ul>
+            </li>
         </ul>
     </nav>
     <p>
-        <br/><br/>
+        <br/>
     </p>
     <div class="panel span12" style="margin: 0 auto;">
         <div class="panel-header">
@@ -67,7 +74,7 @@
                     <td>{propietario}</td>
                     <td>
                         <a class="button link" href="/{systemModuleName}/inventario/doc_productos?documento={id_documento}">
-                            Registrar productos en este documento
+                           Agregar producto
                         </a>  
                     
                         <a class="button link" href="javascript: void(0);" onclick="confirmar({id_documento});">
