--- a/static/html/default/templates/inventario/producto_sugerido.html
+++ b/static/html/default/templates/inventario/producto_sugerido.html
@@ -1,3 +1,9 @@
+<h3>Productos sugeridos</h3>
+<p class="text-muted">
+	Establezca relaciones entre diferentes productos para mejorar las recomendaciones a sus clientes en caso
+	que un producto se agote.
+</p>
+<hr/>
 <div class="panel span5" style="float: left; margin: 20px;">
 	<div class="panel-header">
 		Información
@@ -6,6 +12,7 @@
 		<p>
 			Selecione un producto y a continuación podrá escoger productos que estén estrechamente relacionados, de esta forma
 			puede recomendar a sus clientes productos similares al que buscan en caso de inexistencias.
+			<br/><br/>
 		</p>	
 	</div>
 </div>
@@ -37,6 +44,7 @@
 			</div>
 			<button id="btnAgregarEstilo">Agregar estilo</button>
 		</div>
+		<br/><br/>
 	</div>
 </div>
 
