--- a/static/html/default/templates/inventario/traslado_listado.html
+++ b/static/html/default/templates/inventario/traslado_listado.html
@@ -67,7 +67,11 @@
     }
 </script>
 <section>
-    <h2>Historial de traslados de productos</h2>
+    <h3>Historial de traslados de productos</h3>
+    <p class="text-muted">
+        Esta documentación respalda los movimientos realizados en el kardex
+    </p>
+    <hr/>
     <br />
     <br />
     <div id="bigbox" style="margin:15px;display:!none;">
