--- a/static/html/default/templates/inventario/catalogo.html
+++ b/static/html/default/templates/inventario/catalogo.html
@@ -75,6 +75,11 @@
         margin-bottom:10px; 
     }
 </style>
+<h3>Catálogos de productos</h3>
+<p class="text-muted">
+    Cree catálogos que ayuden a segmentar sus productos por campañas
+</p>
+<hr/>
 <section>
 
     <div class="tab-control bg-white" data-role="tab-control">
@@ -142,17 +147,18 @@
 
         </div>
         <div class="frame" id="_page_2">
-            <h3>Historial</h3>
-            <p>
-                <br /><br />
-            </p>
-            <div class="input-control text span8">
-                <input type="text" placeholder="Buscar" onkeyup="filtrarResultados(event);" />
-                <button class="btn-search" type="button"></button>
-            </div>
-            <div id="bigbox" style="margin:15px;display:!none;">
-                <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
-
+            <div class="panel span12">
+                <div class="panel-header"><i class="icon-database"></i> Catálogos</div>
+                <div class="panel-content">
+                    <div class="input-control text">
+                        <input type="text" placeholder="Buscar" onkeyup="filtrarResultados(event);" />
+                        <button class="btn-search" type="button"></button>
+                    </div>
+                    <div id="bigbox" style="margin:15px;display:!none;">
+                        <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
+        
+                        </div>
+                    </div>
                 </div>
             </div>
             <p>
