--- a/static/html/default/templates/inventario/historial.html
+++ b/static/html/default/templates/inventario/historial.html
@@ -1,4 +1,5 @@
 <h3>Historial de documentos</h3>
+<p class="text-muted">Puede verificar los productos que han sido ingresados al sistema</p>
 <hr/>
 <form>
     <div class="input-control text span2">
@@ -13,7 +14,7 @@
         <input type="text" name="fecha" required />
         <button type="button" class="btn-date"></button>
     </div>
-    <div class="input-control text span4"></div>
+    <div class="input-control text span3"></div>
     <div class="input-control select span2">
         Estado 
         <select name="estado">
@@ -22,8 +23,9 @@
             <option value="1">Aplicado</option>
         </select>
     </div>
-    <button class="button">Buscar</button>
+    <button class="button">Aplicar filtros</button>
 </form>
+<p><br/></p>
 <table class="table span12" style="text-align:center;">
     <thead>
         <tr>
